--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <div class="envelope" id="envelope">
       <div class="back">
         <div class="info">
-          <p><strong>De:</strong> João Silva</p>
-          <p><strong>Para:</strong> Maria Oliveira</p>
+          <p><strong>De:</strong> Leandro, Davi, Helena</p>
+          <p><strong>Para:</strong> Maria Eduarda Bahia</p>
         </div>
         <div class="selo"><img src="selo.png.png" alt="Selo" class="selo"></div>
       </div>
       <div class="front">
         <div class="flap"></div>
         <div class="letter">
-          <p>Querida Maria,</p>
-          <p>gbiusfngusngusn uhgiuhudhsiuh udhgiushgiushiush...</p>
+          <p>Parabéns&#129395&#129395&#129395</p>
+          <p>Hoje é o dia/mês da garota dos mil apelidos (Bahia, coringa, maluca, velha,senhora dos gatos ...)
+          nós te desejamos muita paz, prosperidade e saúde para você. Que consiga conquistar todos seus objetivos e que sua vida seja repleta e farta de mato para que você nunca sinta fome.</p>
           <p><a href="carta2.html"><img src="boloL.png" alt="boloL" class="boloL"></a></p>
         </div>
       </div>
